update init